Version next

Version 2011.04.01.00
* Localize the install manifest
* Add new strings for all translations
* Added translations for: bg-BG, hsb-DE
* Updated translations for: da, fr, hu, it-IT, ro, zh-CN

Version 2011.03.27.22b
* Put S4E style borders (for the Add-on Bar and other bottom toolbars) behind a preference. Disable by default.
* Set urlbar compatibility function shims on the prototype instead of the instance. Fixes compatibility with dynamic bindings (i.e. Smart Text).
* If there are only paused downloads, show the paused count in the button and tooltip ('unknown time remaining' is useless).
* Fix assertion in Firefox 4.2a1pre.
* Add status text getters (better extension integration support).
* Remove delay before showing link/status in the urlbar.
* Add options to control the delay before showing/hiding hovered links.
* Add meta.properties locale file for generating install.rdf l10n blocks.
* Added translations for: sr
* Updated translations for: de, zh-CN

Version 2011.03.21.22
* Make S4E more robust when dealing with incompatible extensions and missing UI elements.
* Properly handle location bar deconstruction when it is removed from the UI.
* Updated translations for: ro
* Update copyright dates.

Version 2011.03.16.22
Summary of changes:
* Rewrote preferences backed and UI
* Implemented link/status in the location bar, with controls to change its appearance
* Added support for the chrome-style status popup
* Advanced controls for changing the styles of the progress bars
* Updated translations for: da, fr, hu, it-IT, ja-JP, nl, pl, pt-BR, sv-SE, zh-CN, zh-TW (de still needs updates)
* Added translations for: ro

Version 2011.01.17.02.4
* Added locales fr, pl, pt-BR and updated various others

Version 2011.03.10.18b
* Fix some compatibility issues with 3rd party themes.
* Keep urlbar suggestion dropdown arrow visible.
* Add option to hide background/async/XHR network status.
* Implement a simple style editor for selecting progress colors and images.