@@ -1,4 +1,14 @@
-statusText=Status Text
-noDownloads=No Downloads
+# Download button strings. These are semi-colon list of plural
+# forms. See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
+# #1 is the number of downloads
 activeDownloads=1 Active Download;#1 Active Downloads
 pausedDownloads=1 Paused Download;#1 Paused Downloads
+noDownloads=No Downloads
+
+# Page load progress strings. These should match the strings that Firefox has been using.
+nv_done=Done
+nv_stopped=Stopped
+nv_timeout=Timed Out
+
+# Should be the same as status4evar.status.widget.title
+statusText=Status Text
